name:                liquoh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/liquoh
license:             BSD3
license-file:        LICENSE
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
copyright:           2018 Kazuki Okamoto
category:            Template
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Liquoh
                     , Text.Liquoh.Interpreter
                     , Text.Liquoh.Interpreter.Template
                     , Text.Liquoh.Interpreter.Expression
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , convertible
                     , lens
                     , lens-aeson
                     , scientific
                     , text
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite liquoh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Text.Liquoh.Interpreter.TemplateSpec
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , liquoh
                     , hspec
                     , QuickCheck
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kakkun61/liquoh
