name:                binary-liquor
version:             0.1.0.0
synopsis:            Binary for Liquor
homepage:            https://github.com/kakkun61/hakyll-liquid
license:             BSD3
license-file:        LICENSE
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
copyright:           2018 Kazuki Okamoto
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:
  Binary for Liquor.

library
  hs-source-dirs:      src
  exposed-modules:     Data.Binary.Liquor.Common
                     , Data.Binary.Liquor.Expression
  build-depends:       base
                     , binary
                     , liquor
                     , vector-binary-instances
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/kakkun61/liquid
