name:                liquoh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/liquoh
license:             BSD3
license-file:        LICENSE
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
copyright:           2018 Kazuki Okamoto
category:            Template
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Liquoh
                     , Text.Liquoh.Common
                     , Text.Liquoh.Helper
                     , Text.Liquoh.Interpreter
                     , Text.Liquoh.Interpreter.Common
                     , Text.Liquoh.Interpreter.Template
                     , Text.Liquoh.Interpreter.Expression
                     , Text.Liquoh.Parser
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , attoparsec-expr
                     , convertible
                     , lens
                     , lens-aeson
                     , scientific
                     , text
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite liquoh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Text.Liquoh.Interpreter.TemplateSpec
                     , Text.Liquoh.ParserSpec
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , attoparsec
                     , liquoh
                     , hspec
                     , QuickCheck
                     , scientific
                     , text
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable liquoh
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , liquoh
                     , aeson
                     , bytestring
                     , options
                     , text
                     , utf8-string
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/kakkun61/liquoh
