name:                liquor-jekyll
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/liquid
license:             BSD3
license-file:        LICENSE
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
copyright:           2018 Kazuki Okamoto
category:            Template
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag monaderror
  description: Use mtl's MonadError [String] other than MonadThrow
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Text.Liquor.Jekyll
                     , Text.Liquor.Jekyll.Common
                     , Text.Liquor.Jekyll.Interpreter
                     , Text.Liquor.Jekyll.Interpreter.Statement
                     , Text.Liquor.Jekyll.Parser
                     , Text.Liquor.Jekyll.Recursive
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , attoparsec-expr
                     , containers
                     , convertible
                     , exceptions
                     , filepath
                     , lens
                     , lens-aeson
                     , liquor
                     , scientific
                     , text
                     , unordered-containers
                     , vector
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Text.Liquor.Jekyll.Interpreter.StatementSpec
                     , Text.Liquor.Jekyll.ParserSpec
                     , Text.Liquor.Jekyll.RecursiveSpec
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , attoparsec
                     , hspec
                     , liquor
                     , liquor-jekyll
                     , mockery
                     , QuickCheck
                     , scientific
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind
  default-language:    Haskell2010

executable liquor-jekyll
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , liquor-jekyll
                     , aeson
                     , bytestring
                     , filepath
                     , options
                     , text
                     , unordered-containers
                     , utf8-string
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/kakkun61/liquor
