name:                liquor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/liquoh
license:             BSD3
license-file:        LICENSE
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
copyright:           2018 Kazuki Okamoto
category:            Template
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Liquor
                     , Text.Liquor.Common
                     , Text.Liquor.Helper
                     , Text.Liquor.Interpreter
                     , Text.Liquor.Interpreter.Common
                     , Text.Liquor.Interpreter.Expression
                     , Text.Liquor.Interpreter.Statement
                     , Text.Liquor.Parser
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , attoparsec-expr
                     , convertible
                     , lens
                     , lens-aeson
                     , scientific
                     , text
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Text.Liquor.Interpreter.StatementSpec
                     , Text.Liquor.ParserSpec
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , attoparsec
                     , liquor
                     , hspec
                     , QuickCheck
                     , scientific
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind
  default-language:    Haskell2010

executable liquor
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , liquor
                     , aeson
                     , bytestring
                     , options
                     , text
                     , unordered-containers
                     , utf8-string
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/kakkun61/liquoh
